<resources>
    <string name="app_name">Bill Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="save">Save</string>
    <string name="dollar">$</string>
    <string name="amount_optional">Amount (optional)</string>
    <string name="date">Date</string>
    <string name="bill_name">Bill Name</string>
    <string name="title">Title</string>
    <string name="due_on">Due on</string>
    <string name="recurrence">Recurrence</string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="days_before">Days Before</string>
</resources>
